[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "node-template"
path = "src/main.rs"

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies.sc-basic-authority]
git = 'https://github.com/paritytech/substrate.git'
rev = '85de8d95188928e901c444a195bd785407c325cb'

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
# sp-io = { version = "2.0.0", path = "../../primitives/io" }
# sc-cli = { version = "2.0.0", path = "../../client/cli" }
# sp-core = { version = "2.0.0", path = "../../primitives/core" }
# sc-executor = { version = "2.0.0", path = "../../client/executor" }
# sc-service = { version = "2.0.0", path = "../../client/service" }
# sp-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
# sc-transaction-pool = { version = "2.0.0", path = "../../client/transaction-pool" }
# sp-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
# sc-network = { version = "0.8", path = "../../client/network" }
# sc-consensus-aura = { version = "0.8", path = "../../client/consensus/aura" }
# sp-consensus-aura = { version = "0.8", path = "../../primitives/consensus/aura" }
# sp-consensus = { version = "0.8", path = "../../primitives/consensus/common" }
# grandpa = { version = "2.0.0", package = "sc-finality-grandpa", path = "../../client/finality-grandpa" }
# grandpa-primitives = { version = "2.0.0", package = "sp-finality-grandpa", path = "../../primitives/finality-grandpa" }
# sc-client = { version = "2.0.0", path = "../../client/" }
node-template-runtime = { version = "2.0.0", path = "runtime" }
# sp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
# sc-basic-authority = { path  = "../../client/basic-authorship" }

[build-dependencies]
vergen = "3.0.4"
# build-script-utils = { version = "2.0.0", package = "substrate-build-script-utils", path = "../../utils/build-script-utils" }
build-script-utils = { git = 'https://github.com/paritytech/substrate.git', package = 'substrate-build-script-utils', rev = '85de8d95188928e901c444a195bd785407c325cb' }

