[package]
name = "node-template-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
# aura = { version = "2.0.0", default-features = false, package = "pallet-aura", path = "../../../frame/aura" }
# balances = { version = "2.0.0", default-features = false, package = "pallet-balances", path = "../../../frame/balances" }
# frame-support = { version = "2.0.0", default-features = false, path = "../../../frame/support" }
# grandpa = { version = "2.0.0", default-features = false, package = "pallet-grandpa", path = "../../../frame/grandpa" }
# indices = { version = "2.0.0", default-features = false, package = "pallet-indices", path = "../../../frame/indices" }
# randomness-collective-flip = { version = "2.0.0", default-features = false, package = "pallet-randomness-collective-flip", path = "../../../frame/randomness-collective-flip" }
# sudo = { version = "2.0.0", default-features = false, package = "pallet-sudo", path = "../../../frame/sudo" }
# system = { version = "2.0.0", default-features = false, package = "frame-system", path = "../../../frame/system" }
# timestamp = { version = "2.0.0", default-features = false, package = "pallet-timestamp", path = "../../../frame/timestamp" }
# transaction-payment = { version = "2.0.0", default-features = false, package = "pallet-transaction-payment", path = "../../../frame/transaction-payment" }
# 
# codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
# 
# frame-executive = { version = "2.0.0", default-features = false, path = "../../../frame/executive" }
# 
# safe-mix = { version = "1.0.0", default-features = false }
# serde = { version = "1.0.101", optional = true, features = ["derive"] }
# 
# sp-api = { version = "2.0.0", default-features = false, path = "../../../primitives/api" }
# sp-block-builder = { path = "../../../primitives/block-builder", default-features = false}
# sp-consensus-aura = { version = "0.8", default-features = false, path = "../../../primitives/consensus/aura" }
# sp-core = { version = "2.0.0", default-features = false, path = "../../../primitives/core" }
# sp-inherents = { path = "../../../primitives/inherents", default-features = false}
# sp-io = { version = "2.0.0", default-features = false, path = "../../../primitives/io" }
# sp-offchain = { version = "2.0.0", default-features = false, path = "../../../primitives/offchain" }
# sp-runtime = { version = "2.0.0", default-features = false, path = "../../../primitives/runtime" }
# sp-session = { version = "2.0.0", default-features = false, path = "../../../primitives/session" }
# sp-std = { version = "2.0.0", default-features = false, path = "../../../primitives/std" }
# sp-transaction-pool = { version = "2.0.0", default-features = false, path = "../../../primitives/transaction-pool" }
# sp-version = { version = "2.0.0", default-features = false, path = "../../../primitives/version" }

aura = { default-features = false, package = "pallet-aura", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
balances = { default-features = false, package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
grandpa = { default-features = false, package = "pallet-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
indices = { default-features = false, package = "pallet-indices", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
randomness-collective-flip = { default-features = false, package = "pallet-randomness-collective-flip", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sudo = { default-features = false, package = "pallet-sudo", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
system = { default-features = false, package = "frame-system", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
timestamp = { default-features = false, package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
transaction-payment = { default-features = false, package = "pallet-transaction-payment", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }

codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }

frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }

safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-session = { default-features = false,  git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = 'https://github.com/paritytech/substrate.git', rev = '85de8d95188928e901c444a195bd785407c325cb' }

[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"indices/std",
	"randomness-collective-flip/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
]
